--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <img src="https://via.placeholder.com/180" alt="Profile photo of Poushali Sengupta, Ph.D. Research Fellow" class="profile-img">
+                <img src="profile.jpg" alt="Profile photo of Poushali Sengupta, Ph.D. Research Fellow" class="profile-img">
                 <div class="header-text">
                     <h1>Poushali Sengupta, Ph.D. Research Fellow</h1>
                     <p>Trustworthy AI | Explainability | Privacy | Security | Fairness | Distributed Machine Learning</p>
