--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                         <a href="https://www.linkedin.com/in/poushali96/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
                         <a href="https://scholar.google.com/citations?user=example&user=0485khoAAAAJ" target="_blank" rel="noopener noreferrer"><i class="fas fa-graduation-cap"></i> Google Scholar</a>
                         <a href="https://github.com/Poushali96" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
-                        <a href="https://poushalisengupta.com" target="_blank" rel="noopener noreferrer"><i class="fas fa-home"></i> Homepage</a>
+                        <a href="https://www.mn.uio.no/ifi/english/people/aca/poushals/" target="_blank" rel="noopener noreferrer"><i class="fas fa-home"></i> University-Homepage</a>
                     </div>
                 </div>
             </div>
@@ -486,7 +486,6 @@
                 <li><a href="#publications" data-en="Publications" data-no="Publikasjoner">Publications</a></li>
                 <li><a href="#skills" data-en="Skills" data-no="Ferdigheter">Skills</a></li>
                 <li><a href="#misc" data-en="Miscellaneous" data-no="Diverse">Miscellaneous</a></li>
-                <li><a href="#references" data-en="References" data-no="Referanser">References</a></li>
             </ul>
         </div>
     </nav>
